--- a/src/temp.html
+++ b/src/temp.html
@@ -7,6 +7,19 @@
     <title><%= htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
-    
+    <header>head</header>
+    <nav>
+        <div class="todoArea">
+            <button>Inbox</button>
+            <button>Today</button>
+            <button>This week</button>
+        </div>
+        <div class="projectArea">
+            <h2>Projects</h2>
+            <button>Add project</button>
+        </div>
+    </nav>
+    <main></main>
+    <footer>foot</footer>
 </body>
 </html>
