Func add task to page. Messy.

--- a/src/temp.html
+++ b/src/temp.html
@@ -19,7 +19,14 @@
             <button>Add project</button>
         </div>
     </nav>
-    <main></main>
+    <main>
+        <div class="titleArea">
+            
+        </div>
+        <div class="listArea">
+            con
+        </div>
+    </main>
     <footer>foot</footer>
 </body>
 </html>
