Fixed date bug.

--- a/src/temp.html
+++ b/src/temp.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="todoArea">
             <button>Inbox</button>
-            <button>Today</button>
+            <button id="todayButton">Today</button>
             <button>This week</button>
         </div>
         <div class="projectArea">
