--- a/src/temp.html
+++ b/src/temp.html
@@ -10,7 +10,7 @@
     <header>head</header>
     <nav>
         <div class="todoArea">
-            <button>Inbox</button>
+            <button id="inboxButton">Inbox</button>
             <button id="todayButton">Today</button>
             <button>This week</button>
         </div>
