Week button function.

--- a/src/temp.html
+++ b/src/temp.html
@@ -12,7 +12,7 @@
         <div class="todoArea">
             <button id="inboxButton">Inbox</button>
             <button id="todayButton">Today</button>
-            <button>This week</button>
+            <button id="weekButton">This week</button>
         </div>
         <div class="projectArea">
             <h2>Projects</h2>
