Project objects on page.

--- a/src/temp.html
+++ b/src/temp.html
@@ -15,8 +15,13 @@
             <button id="weekButton">This week</button>
         </div>
         <div class="projectArea">
-            <h2>Projects</h2>
-            <button>Add project</button>
+            <div class="projectAddArea">
+                <h2>Projects</h2>
+                <button id="projectButton">Add project</button>
+            </div>
+            <div class="projectListArea">
+                
+            </div>
         </div>
     </nav>
     <main>
